--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   "dependencies": {
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/compiler": "^4.4.1",
+    "@angular/core": "^4.4.1",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "ag-grid": "7.1.x",
+    "ag-grid-ng2": "7.1.x",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "jquery": "^3.0.0",
+    "popper.js": "^1.11.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
@@ -36,6 +40,7 @@
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "jquery": "^3.0.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
