--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "jquery": "^3.0.0",
+    "json-server": "^0.12.0",
     "popper.js": "^1.11.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
